--- a/linkSharing/src/main/resources/application.properties
+++ b/linkSharing/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.mail.properties.mail.smtp.auth=true
 logging.level.com.ttn.linkSharing=debug
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+#spring.servlet.multipart.file-size-threshold=2KB
